@@ -9,6 +9,8 @@
 * Added unit tests for LSPString and Color classes.
 * Renamed invalid resolve_entity() method to set_value() method for xml::PullParser.
 * Added TT_COMMA token to expr:Tokenizer.
+* Added support of TF_XKEYWORDS flag by expr:Tokenizer which allows to interpret
+  keywords as barewords.
 
 === 0.5.1 ===
 * Added Color class.
